# rules_lang

./: .gitignore  CHANGELOG.md  MODULE.bazel  README.md
docs/: BUILD.bazel  aion.md  sql.md  update.sh
lean/: BUILD.bazel  atlas.bzl  lake-manifest.json  lakefile.lean
polyglot/: BUILD.bazel  aion.bzl  aion_aspects.bzl  aion_providers.bzl  aion_rules.bzl  sql.bzl
polyglot/sql/: BUILD.bazel
proto/: BUILD.bazel  emit.proto  lir.proto  lir_codec.proto
rules/: aion.bzl
rules/c/: BUILD.bazel  rules.bzl
rules/c/cli/: BUILD.bazel  ast_to_tensor.py  c_cluster_diff.py  c_to_rust_bindings.py  dump_from_compdb.py  json_to_ttl.py  llvm_ir_equiv.py  translation_queue.py
smoke/: Smoke.lean
tools/emit/: BUILD.bazel  emit_manifest.bzl  manifest_packer.py
