load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

package(default_visibility = ["//visibility:public"])

# Reference docs are stardoc-generated *and* committed to source. The diff_test
# gates assert the committed .md matches what stardoc produces from the .bzl
# docstrings; CI fails if a rule changes without `bazel run //docs:update`.
# (Pattern from rules_lean / rules_rust / rules_python.)

stardoc(
    name = "aion_doc",
    out = "aion.md.generated",
    input = "//polyglot:aion.bzl",
    deps = ["//polyglot:aion_bzl"],
)

stardoc(
    name = "sql_doc",
    out = "sql.md.generated",
    input = "//polyglot:sql.bzl",
    deps = ["//polyglot:sql_bzl"],
)

diff_test(
    name = "aion_doc_up_to_date",
    file1 = "aion.md",
    file2 = ":aion_doc",
)

diff_test(
    name = "sql_doc_up_to_date",
    file1 = "sql.md",
    file2 = ":sql_doc",
)

# `bazel run //docs:update` regenerates aion.md + sql.md in the source tree.
# Run after changing any rule docstring.
sh_binary(
    name = "update",
    srcs = ["update.sh"],
    data = [
        ":aion_doc",
        ":sql_doc",
    ],
)
