load("@rules_lean//lean:lean.bzl", "lean_imported_library")

package(default_visibility = ["//visibility:public"])

# Toolchain hook files referenced by MODULE.bazel's lake.workspace.
exports_files([
    "lakefile.lean",
    "lake-manifest.json",
    "lean-toolchain",
])

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "darwin_arm64",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:arm64",
    ],
)

# The polyglot atlas, exposed as LeanInfo with NO recompile. The arch-matching
# olean is fetched from this repo's GitHub releases (//lean:atlas.bzl).
# Consumers `deps = ["@rules_lang//lean:atlas"]` to reach Polyglot.* as compiled
# oleans under the pinned v4.30.0-rc2 toolchain.
lean_imported_library(
    name = "atlas",
    srcs = select({
        ":linux_x86_64": ["@polyglot_atlas_linux_x86_64//:all"],
        ":darwin_arm64": ["@polyglot_atlas_darwin_arm64//:all"],
    }),
    path_marker = select({
        ":linux_x86_64": "@polyglot_atlas_linux_x86_64//:.lean_root",
        ":darwin_arm64": "@polyglot_atlas_darwin_arm64//:.lean_root",
    }),
)
